[package]
name = "wei-test"
version = "0.1.0"
edition = "2021"

description = "wei test"
documentation = "https://github.com/zuiyue-com/wei-test"
homepage = "https://github.com/zuiyue-com/wei-test"
license = "MIT OR Apache-2.0"

[dependencies]


[profile.release]
lto = true
codegen-units = 1
panic = 'abort'

[profile.dev]
panic = 'abort'
