[package]
name = "wei-test"
version = "0.1.0"
edition = "2021"

description = "wei test"
documentation = "https://github.com/zuiyue-com/wei-test"
homepage = "https://github.com/zuiyue-com/wei-test"
license = "MIT OR Apache-2.0"

[dependencies]
# tokio = { version = "1", features = ["full"] }
# wei-single = "0.3.5"
wmi = "0.13.1"
serde = "*"
